# Labs_C

12/: 12.c
14/: 14.c
15/: 15.c
second course/SysProg/lab 3/: CMakeLists.txt
second course/SysProg/lab 3/client/: CMakeLists.txt
second course/SysProg/lab 3/client/include/: client.hpp
second course/SysProg/lab 3/client/src/: client.cpp  main.cpp
second course/SysProg/lab 3/ipc/: CMakeLists.txt
second course/SysProg/lab 3/ipc/message_queue/: CMakeLists.txt
second course/SysProg/lab 3/ipc/message_queue/include/: message_queue.hpp
second course/SysProg/lab 3/ipc/message_queue/src/: message_queue.cpp
second course/SysProg/lab 3/ipc/semaphore/: CMakeLists.txt
second course/SysProg/lab 3/ipc/semaphore/include/: semaphore.hpp
second course/SysProg/lab 3/ipc/semaphore/src/: semaphore.cpp
second course/SysProg/lab 3/ipc/shared_memory/: CMakeLists.txt
second course/SysProg/lab 3/ipc/shared_memory/include/: shared_memory.hpp
second course/SysProg/lab 3/ipc/shared_memory/src/: shared_memory.cpp
second course/SysProg/lab 3/server/: CMakeLists.txt
second course/SysProg/lab 3/server/include/: server.hpp
second course/SysProg/lab 3/server/src/: main.cpp  server.cpp
second course/SysProg/lab 3/subprocesses/compiler/: CMakeLists.txt
second course/SysProg/lab 3/subprocesses/compiler/include/: compiler.hpp
second course/SysProg/lab 3/subprocesses/compiler/src/: compiler.cpp  main.cpp
second course/SysProg/lab 3/subprocesses/sticks_game/: CMakeLists.txt
second course/SysProg/lab 3/subprocesses/sticks_game/include/: game_worker.hpp
second course/SysProg/lab 3/subprocesses/sticks_game/src/: game_worker.cpp  main.cpp
second course/SysProg/lab 3/utils/: CMakeLists.txt
second course/SysProg/lab 3/utils/exceptions/: CMakeLists.txt
second course/SysProg/lab 3/utils/logger/: CMakeLists.txt
(+285 files in other folders)
